# datatrak-bandpass2

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Jenkinsfile  README.md  THIRD_PARTY.md  vcpkg.json
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
cmake/: deps_linux.cmake  deps_macos.cmake  deps_windows.cmake  version.cmake
data/: bandpass2.desktop  williams_uk_network.toml
data/zones/: uk_32zone.geojson
docker/: Dockerfile.build
docs/: scenario_file_format.md
docs/physics/: propagation_model.md
docs/user_guide/: coordinate_systems.md  monitor_calibration.md  receiver_modelling.md
spec/: BANDPASS2_Architecture_Rev3.docx  FrequencyConfig.md
src/: CMakeLists.txt  main.cpp
src/almanac/: AlmanacExport.cpp  AlmanacExport.h  MonitorCalib.cpp  MonitorCalib.h  ZonePatterns.cpp  ZonePatterns.h
src/coords/: CoordSystem.h  NationalGrid.cpp  NationalGrid.h  Osgb.cpp  Osgb.h
src/engine/: asf.cpp  asf.h  compute_manager.cpp  compute_manager.h  conductivity.cpp  conductivity.h  grid.cpp  grid.h  groundwave.cpp  groundwave.h  grwave.cpp  grwave.h  monteath.cpp  monteath.h  noise.cpp  noise.h  parallel.h  skywave.cpp  skywave.h  snr.cpp  snr.h  terrain.cpp  terrain.h  whdop.cpp  whdop.h
src/model/: DataPaths.cpp  DataPaths.h  MonitorStation.h  ReceiverModel.h  Scenario.h  SlotPhaseResult.h  Transmitter.h  toml_io.cpp  toml_io.h
src/ui/: ExportManager.cpp  ExportManager.h  LayerPanel.cpp  LayerPanel.h  MainFrame.cpp  MainFrame.h  MapPanel.cpp  MapPanel.h  NetworkConfigPanel.cpp  NetworkConfigPanel.h  ParamEditor.cpp  ParamEditor.h  PoRefDialog.cpp  PoRefDialog.h  ReceiverPanel.cpp  ReceiverPanel.h  ResultsPanel.cpp  ResultsPanel.h  TileCache.cpp  TileCache.h  UiConstants.h  toolbar_icons.h  version_generated.h.in
src/web/: bridge.js  map.html
src/web/leaflet/: leaflet.css  leaflet.js
tests/: CMakeLists.txt
tests/almanac/: test_almanac_export.cpp  test_monitor_calib.cpp  test_zone_patterns.cpp
tests/coords/: test_osgb.cpp
tests/engine/: test_asf.cpp  test_compute_manager.cpp  test_export_manager.cpp  test_groundwave.cpp  test_snr_whdop.cpp
tests/model/: test_toml_io.cpp
tools/: build_appimage.sh  itu_p832_import.py  ostn15_download.py  srtm_download.py
